--- a/css/product-page.css
+++ b/css/product-page.css
@@ -7,14 +7,23 @@ grid-template-rows: 200px 200px 200px 200px 200px 200px 200px ;
 
 
 .productimg1 {
-height: 600px; 
-width: 700px;
-
-border-radius: 5%;   
-}
+    grid-column-start: 1; 
+    grid-column-end: 4; 
+    grid-row-start: 1; 
+    grid-row-end: 4;
+    height: 600px; 
+    width: 700px;
+    border: 5px solid black;
+    border-radius: 5%;   
+    }
+    .productimg1 img {
+        
+        height: 600px; 
+        width: 700px;
+    }
 .buttonmenu{
-    grid-column-start: 3; 
-    grid-column-end: 3; 
+    grid-column-start: 4; 
+    grid-column-end: 4; 
     grid-row-start: 1; 
     grid-row-end: 4;
     background-color: lightgray;
@@ -24,10 +33,7 @@ border-radius: 5%;
     padding-top: 1px;
 }
 .buttonmenu button{
-    grid-column-start: 3; 
-    grid-column-end: 3; 
-    grid-row-start: 2; 
-    grid-row-end: 2;
+    
     border: 3px solid white; 
     border-radius: 10%; 
     margin-top: 30px;
@@ -39,10 +45,7 @@ border-radius: 5%;
     
     }
     .buttonmenu h1{
-        grid-column-start: 3; 
-        grid-column-end: 3; 
-        grid-row-start: 1; 
-        grid-row-end: 4;
+        
         background-color: lightgray;
         border-radius: 3%;
         text-align: center;
@@ -50,14 +53,16 @@ border-radius: 5%;
         font-family: cursive;
     }
     .menutext {
-        grid-column-start: 4; 
-        grid-column-end: 4; 
+        grid-column-start: 5; 
+        grid-column-end: 6; 
         grid-row-start: 1; 
         grid-row-end: 5; 
         background-color: green; 
         padding-top: 50px;
-        padding-left: 5px;
+        padding-left: 25px;
         color: white;
+        width: auto;
+        
         
     }
     .menutext p {
@@ -65,7 +70,6 @@ border-radius: 5%;
         grid-column-end: 4; 
         grid-row-start: 1; 
         grid-row-end: 5; 
-        ; 
-        
-        font-size: x-small;
+         font-size: xx-large;
+         
     }
