--- a/css/product-page.css
+++ b/css/product-page.css
@@ -3,29 +3,71 @@ display: grid;
 grid-template-columns: 350px 350px 350px 350px; 
 grid-template-rows: 200px 200px 200px 200px 200px 200px 200px ;   
 }
+.navbar {
+    grid-column-start: 1; 
+    grid-column-end: 6; 
+    grid-row-start: 1; 
+    grid-row-end: 1; 
+    background-color: green;   
+}
 
-
-
+.varukorg {
+    height: 100px;
+    width: 100px; 
+    position: absolute;right: 25px;top: 25px; 
+    border-radius: 20%;
+    }
+    .logo {
+    height: 200px;   
+    width: 200px; 
+    
+    }
+    
+    .navlink1 {
+    position: absolute;top: 15px;left: 550px;
+    font-size: 30px;
+    color: white;
+    }
+    .navlink2 {
+        position: absolute;top: 15px;left: 350px;
+        font-size: 30px;
+        color: white;
+        }
+        .navlink3 {
+            position: absolute;top: 15px;left: 250px;
+            font-size: 30px;
+            color: white;
+            }
+        
+                
+                
+                .cart {
+                height: 55px;
+                width: 55px;
+                }
 .productimg1 {
     grid-column-start: 1; 
     grid-column-end: 4; 
-    grid-row-start: 1; 
-    grid-row-end: 4;
+    grid-row-start: 2; 
+    grid-row-end: 5;
     height: 600px; 
     width: 700px;
-    border: 5px solid black;
-    border-radius: 5%;   
+     
     }
     .productimg1 img {
-        
+        grid-column-start: 1; 
+        grid-column-end: 5; 
+        grid-row-start: 2; 
+        grid-row-end: 5;
         height: 600px; 
         width: 700px;
+        
     }
 .buttonmenu{
-    grid-column-start: 4; 
-    grid-column-end: 4; 
-    grid-row-start: 1; 
-    grid-row-end: 4;
+    grid-column-start: 3; 
+    grid-column-end: 5; 
+    grid-row-start: 2; 
+    grid-row-end: 5;
     background-color: lightgray;
     border-radius: 3%;
     text-align: center;
@@ -52,17 +94,33 @@ grid-template-rows: 200px 200px 200px 200px 200px 200px 200px ;
         padding: 1px;
         font-family: cursive;
     }
+
+    .buttonmenu button {
+    margin-top: 80px;   
+    }
     .menutext {
         grid-column-start: 5; 
         grid-column-end: 6; 
-        grid-row-start: 1; 
+        grid-row-start: 2; 
         grid-row-end: 5; 
-        background-color: green; 
+        background-color: darkgreen; 
         padding-top: 50px;
         padding-left: 25px;
         color: white;
-        width: auto;
-        
+    }
+    .productsize {
+    width: 50px;    
+    height: 50px;
+    margin: 5px;
+    }
+    
+    .packer {
+        grid-column-start: 3; 
+        grid-column-end: 5; 
+        grid-row-start: 2; 
+        grid-row-end: 2;  
+        text-align: center;
+        margin-top: 140px;
         
     }
     .menutext p {
@@ -71,5 +129,4 @@ grid-template-rows: 200px 200px 200px 200px 200px 200px 200px ;
         grid-row-start: 1; 
         grid-row-end: 5; 
          font-size: xx-large;
-         
-    }
+         }
