--- a/css/sida.css
+++ b/css/sida.css
@@ -22,7 +22,11 @@ color: white;
     font-size: 20px;
     color: white;
     }
-    
+    .navlink3 {
+        position: absolute;top: 15px;left: 500px;
+        font-size: 20px;
+        color: white;
+        } 
             
             
             .cart {
