--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -85,3 +85,88 @@ background-image: url(https://t3.ftcdn.net/jpg/00/92/63/82/360_F_92638243_9mMQdx
 table {
 padding: 20px;  
 }
+@media screen and (max-width: 800px) {
+    .gridcontainer-kontakt {
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
+    }
+        .navbar {
+            grid-column-start: 1;    
+            grid-column-end: 1;
+            grid-row-start: 1;
+            grid-row-end: 2;
+            background-color: green;
+            height: 100px;
+            position: sticky;top: 0px;
+            }
+            .varukorg {
+                height: 65px;
+                width: 65px; 
+                position: absolute;right: 25px;top: 25px; 
+                border-radius: 20%;
+                }
+                .logo {
+                height: 100px;   
+                width: 100px; 
+                
+                }
+                .cart {
+                    height: 35px;
+                    width: 35px;
+                    }
+                
+                .navlink1 {
+                position: absolute;top: 15px;left: 120px;
+                font-size: 20px;
+                color: white;
+                }
+                .navlink2 {
+                    position: absolute;top: 15px;left: 180px;
+                    font-size: 20px;
+                    color: white;
+                    }
+                    .navlink3 {
+                        position: absolute;top: 15px;left: 280px;
+                        font-size: 20px;
+                        color: white;
+                        } 
+        .holder1 {
+            grid-column-start: 1;    
+            grid-column-end: 1;
+            grid-row-start: 3;
+            grid-row-end: 6;
+            background-color: green;
+           
+            border-radius: 10px;
+            text-align: center;
+            border: 3px solid white;
+        }
+        .holder2 {
+            grid-column-start: 1;    
+            grid-column-end: 1;
+            grid-row-start: 11;
+            grid-row-end: 14;
+            background-color: green;
+            border-radius: 10px;
+            text-align: center;
+            border: 3px solid white;
+        
+        }
+        .holder3 {
+            grid-column-start: 1;    
+            grid-column-end: 1;
+            grid-row-start: 11;
+            grid-row-end: 14;
+            background-color: green;
+            
+            border-radius: 10px;
+            text-align: center;
+            border: 3px solid white;
+        }
+        table {
+        padding: 20px;  
+        }
+
+
+         }
